# deno-windows-scm

./: .gitignore  Cargo.toml  README.md  appveyor.yml  lib.rs  tmp.rs
src/: lib.rs
test/: create_service.bat  deps.ts  paths.ts  scmEntryPoint.ts  service.txt  setupLogging.ts  test.js
ts/: existsSync.ts  mod.ts  types.ts  winscmStartDispatcher.ts  worker.ts
ts/worker/: winscmWorker.js
