# Copyright 2021, alex at staticlibs.net
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "windows_scm_plugin"
version = "1.0.0"
authors = ["alex@staticlibs.net"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
deno_core = "0.88.1"
futures = "0.3.9"
serde = "1"
libc = "0.2"
winapi = { version = "0.3", features = ["winsvc"] }
widestring = "0.4"

